--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <a title="Gene" href="page_gene/index.html">Gene </a>
             </td>
             <td class="navigation">
-                <a title="Demo" href="page_demo/">Others </a>
+                <a title="Demo" href="page_demo/index.html">Others </a>
             </td>
         </tr>
     </table>
